--- a/WareHouseNJsound/Views/Request/PendingRequets.cshtml
+++ b/WareHouseNJsound/Views/Request/PendingRequets.cshtml
@@ -90,7 +90,7 @@
         <input id="empID" name="empID" type="hidden" />
         <div class="icon-back d-flex align-items-center justify-content-start"></div>
 
-        <h2 style="font-family: 'Noto Sans Thai', sans-serif; margin-bottom: 10px;">คำร้องขอ</h2>
+        <h2 style="font-family: 'Noto Sans Thai', sans-serif; margin-bottom: 10px;">รายการเบิก</h2>
 
         <div class="table-responsive">
             <table class="table table-bordered" id="tblMyRequest" style="font-size: 12px; font-weight: 400;">
