--- a/WareHouseNJsound/Views/Request/Edit.cshtml
+++ b/WareHouseNJsound/Views/Request/Edit.cshtml
@@ -4,11 +4,18 @@
 }
 
 <div class="container py-3">
-    <div class="mb-3">
-        <a class="btn btn-outline-secondary d-flex justify-content-start" asp-action="PendingRequets" asp-controller="Request">ย้อนกลับ</a>
-        <h2 class="d-flex justify-content-center " style="font-family: 'Noto Sans Thai', sans-serif; margin-bottom: 10px;">รายละเอียดคำร้องขอ</h2>
-        
+    <div class="row align-items-center mb-3">
+        <div class="col-auto">
+            <a class="btn btn-outline-secondary btn-sm d-inline-flex align-items-center px-3"
+               asp-action="PendingRequets" asp-controller="Request">
+                <i class="bi bi-arrow-left me-1"></i> ย้อนกลับ
+            </a>
+        </div>
+
     </div>
+    <h2 class="mb-5 " style="font-family: 'Noto Sans Thai', sans-serif;">
+        รายละเอียดรายการเบิก
+    </h2>
 
     <div class="card mb-3">
         <div class="card-body">
@@ -49,7 +56,7 @@
                 {
                     <tr>
                         <td class="text-center">@i</td>
-                        <td>@d.Materials?.MaterialsName (@d.Materials_ID)</td>
+                        <td class="text-start">@d.Materials?.MaterialsName (@d.Materials_ID)</td>
                         <td class="text-center">@d.Quantity</td>
                         <td class="text-center">@d.Unit?.UnitName</td>
                         <td>@d.Jobs?.JobsName</td>
@@ -66,7 +73,7 @@
             <input type="hidden" name="requestId" value="@Model.Request_ID" />
             <input type="hidden" name="decision" value="approve" />
             <button type="submit" class="btn btn-success">
-                อนุมัติ
+                เสร็จสิ้น
             </button>
         </form>
 
@@ -76,7 +83,7 @@
             <input type="hidden" name="decision" value="reject" />
             <input type="hidden" name="rejectReason" id="rejectReason" />
             <button type="submit" class="btn btn-danger">
-                ปฏิเสธ
+                ยกเลิก
             </button>
         </form>
     </div>
