--- a/WareHouseNJsound/Views/Home/Index.cshtml
+++ b/WareHouseNJsound/Views/Home/Index.cshtml
@@ -72,7 +72,7 @@
                 <i class="bx bx-plus"></i> เพิ่มสินค้า
             </a>
             <a asp-controller="Home" asp-action="Receipt" class="btn btn-info" style="font-family: 'Noto Sans Thai', sans-serif; color:#fff;">
-                Receipt
+                รับเข้า
             </a>
         </div>
 
